<resources>
    <string name="app_name">Black\'N\'Gram</string>
    <string name="username_error">Wrong Username</string>
    <string name="user_name">Username</string>
    <string name="login">Login</string>
    <string name="contentDescriptionPicture">Image</string>
    <string name="Share">Share</string>
    <string name="by">"By "</string>
    <string name="signin">Sign in</string>
    <string name="password">Password</string>
    <string name="Like">Like</string>
    <string name="logout">Logout</string>
    <string name="favorite">Favorite</string>
    <string name="LoginTitleActivity">Login</string>
    <string name="MainTitleActivity">Black\'N\'Gram</string>
    <string name="FavoriteTitleActivity">My Favorite</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="user_already_exist">User already exist</string>
    <string name="wrong_credential">Wrong Username/Password</string>
    <string name="error_connection">Error connection</string>
    <string name="error_load_pictures">Error load pictures</string>
    <string name="select_picture">Select picture</string>
    <string name="on_error_as_occurred">On error as occurred</string>
    <string name="error_upload_picture">Error upload picture</string>
    <string name="anonymous">anonymous</string>
    <string name="delete_picture">Delete picture</string>
    <string name="title_dialog_delete_picture">Delete Picture ?</string>
    <string name="content_dialog_delete_picture">Diacard this picture from Black\'N\'Gram ?</string>
    <string name="positive_dialog_delete_picture">Discard</string>
    <string name="negative_dialog_delete_picture">Cancel</string>
</resources>
