<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".MainActivity">

    <item android:id="@+id/favorite"
          android:orderInCategory="200"
          android:title="@string/favorite"
          android:icon="@drawable/ic_heart_white"
          app:showAsAction="ifRoom">
    </item>
    <item android:id="@+id/profile"
          android:orderInCategory="100"
          android:title="@string/profile"
          app:showAsAction="never">
    </item>
    <item android:id="@+id/logout"
          android:orderInCategory="200"
          android:title="@string/logout"
          app:showAsAction="never">
    </item>
</menu>